# pgqt

./: .dockerignore  .gitignore  1  AGENTS.md  ARCHITECTURE_REVIEW_IMPLEMENTATION_PLAN.md  ARCHITECTURE_REVIEW_PHASE_1_PLAN.md  ARCHITECTURE_REVIEW_PHASE_3_PLAN.md  ARCHITECTURE_REVIEW_PHASE_4_PLAN.md  ARCHITECTURE_REVIEW_PHASE_5_PLAN.md  CHANGELOG.md  COMPATIBILITY_IMPROVEMENT_PLAN.md  COMPATIBILITY_STATUS.md  COMPATIBILITY_STATUS_PLAN.md  COMPATIBILITY_STATUS_PLAN_1.1.md  COMPATIBILITY_STATUS_PLAN_2.2.md  COMPATIBILITY_STATUS_PLAN_3.1.md  COMPLETION_SUMMARY.md  Cargo.toml  Dockerfile  E2E_MODERNIZATION_COMPLETE.md  E2E_TEST_MODERNIZATION.md  FINAL_SUMMARY.md  FUNCTION_ARCHITECTURE.md  FUNCTION_CALL_INTERCEPTION_SUMMARY.md  FUNCTION_DOCUMENTATION_SUMMARY.md  FUNCTION_IMPLEMENTATION_COMPLETE.md  FUNCTION_IMPLEMENTATION_SUMMARY.md  FUNCTION_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_SUMMARY.md  PHASE_5_TRANSACTION_IMPLEMENTATION_STATUS.md  POST_PLPGSQL_PLAN.md  README.md  TEST_AUTH_README.md  TRANSACTION_SUPPORT_PLAN.md  TRIGGER_FOLLOW_UP_PLAN.md  TRIGGER_IMPLEMENTATION_PLAN.md  TRIGGER_LIMITATIONS_PLAN.md  TRIGGER_PHASES_3_4_PLAN.md  UPGRADE_STATUS.md  (+53 more)
Northwind-Pagila-Tests/: improvement_plan.md  run_comprehensive_tests.sh
assets/: dashboard.html
docs/: AGGREGATES.md  API.md  ARCHITECTURE.md  ARRAYS.md  COMPATIBILITY_IMPROVEMENTS_SUMMARY.md  CONNECTION_POOL.md  COPY.md  DATA_TYPES.md  DISTINCT_ON.md  ENUMS.md  EXAMPLES.md  FTS.md  FUNCTIONS.md  GEO.md  INTERVAL.md  JOIN_IMPROVEMENTS.md  JSON.md  KNOWN_ISSUES.md  LATERAL.md  LATERAL_PLAN.md  PG_CATALOG.md  PHASE_1_2_3_COMPLETION_SUMMARY.md  RANGE.md  RBAC-DETAILED-PLAN.md  RBAC-IMPLEMENTATION-PLAN.md  RBAC-PROGRESS.md  RBAC.md  RLS.md  SCHEMAS.md  SETTINGS.md  TEST_PROCEDURE.md  TODO-FEATURES.md  TRIGGERS.md  VECTOR.md  WINDOW.md  WINDOW_FUNCTIONS_IMPL.md  build-options.md  copy-encoding.md  deferred_features.md  metrics.md  (+7 more)
examples/: grafana-dashboard.json  prometheus.yml  test_atz.rs  test_for.rs  test_parse.rs  test_parser.rs  test_raise.rs  test_while.rs  test_window.rs
functions/: FUNCTION_CODE_EXAMPLES.md  FUNCTION_IMPLEMENTATION_PLAN.md  FUNCTION_INDEX.md  FUNCTION_QUICK_START.md  PLPGSQL_PHASE2B_PLAN.md  PLPGSQL_PHASE2_PLAN.md  PLPGSQL_STATUS.md  README.md
plans/: PHASE_1_JSON_JSONB.md  PHASE_2_INTERVAL.md  PHASE_3_AGGREGATES.md  PHASE_4_INSERT.md  PHASE_5_CTE.md  PHASE_6_FLOAT.md  PHASE_7_ERROR_HANDLING.md  README.md
postgres-compatabilty-suite/: README.md  conftest.py  questions.json  run_suite.sh  runner.py
postgres-compatibility-suite/: README.md  conftest.py  pgqt-test-suite-plan.md  phase1_analysis.md  questions.json  run_suite.sh  runner.py  runner_with_stats.py
src/: array.rs  array_agg.rs  auth.rs  bool_aggregates.rs  catalog.rs  config.rs  connection_pool.rs  copy.rs  count_lines.sh  debug.rs  distinct_on.rs  float_special.rs  fts.rs  functions.rs  geo.rs  handler_interval_functions.rs  hypothetical_rank.rs  interval.rs  jsonb.rs  lib.rs  main.rs  plpgsql.rs  range.rs  regex_funcs.rs  rls.rs  rls_inject.rs  schema.rs  smoke_test.rs  stats.rs  stats_accum.rs  tls.rs  transpiler.rs  vector.rs
test-suite/: README.md  pgqt-test-suite-plan.md  run_suite.sh
(+208 files in other folders)
