[package]
name = "pgqt"
version = "0.7.1"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
pgwire = "0.38"
rusqlite = { version = "0.38", features = ["bundled", "column_decltype", "functions", "cache"] }
pg_query = "6.1"
pg_parse = { version = "0.12", optional = true }
mlua = { version = "0.10", features = ["luau", "serialize", "send"] }
anyhow = "1.0"
dashmap = "6.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"
bytes = "1.11.1"
clap = { version = "4.5", features = ["derive", "env"] }
regex = "1.10"
libc = "0.2"
chrono = "0.4"
hex = "0.4"
encoding_rs = "0.8"
lazy_static = "1.4"
md5 = "0.7"
uuid = { version = "1.7", features = ["v4", "v7", "rng"] }
lru = "0.12"
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"

[features]
default = ["plpgsql"]
plpgsql = ["pg_parse"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
tempfile = "3.0"
